<?xml version="1.0" encoding="utf-8"?>
<!--
 Copyright 2014 The Android Open Source Project

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->

<resources>
    <string name="element_text">Element</string>
    <string name="grid_layout_manager">Grid Layout Manager</string>
    <string name="linear_layout_manager">Linear Layout Manager</string>
    <string name="app_name">ProjectAndroid</string>
    <string name="recherchemenu">recherchemenu</string>
    <string name="incription">Inscription</string>
    <string name="connection">Connection</string>
    <string name="mailtext">Entrez votre mail</string>
    <string name="passwordtext">Entrez votre password</string>
    <string name="inscriptionmail">Adresse mail</string>
    <string name="inscriptionmnom">Nom d\'utilisateur</string>
    <string name="inscriptionadresse">Adresse</string>
    <string name="inscriptionpassword1">Mot de passe</string>
    <string name="inscriptionpassword2">Confirmer votre mot de passe</string>
    <string name="inscription_ajouter_image">Bouton</string>
    <string name="inscription_bouton_confiramtion">Bouton_inscription</string>

</resources>